# Avionics-Flight-Computer

./: .cproject  .gitignore  CMakeLists.txt  README.md  build.sh  changelog.txt  clean.sh  generator.py
AvionicsSoftware-AtollicProject/: .cproject  .gitignore  .mxproject  BOOTSTRAP.bat  BUILD.bat  BUILD.ps1  CLEAN.bat  CLEAN.ps1  CLEAN_ALL.bat  CLEAN_ALL.ps1  CMakeLists.txt  CONFIGURE.bat  CONFIGURE.ps1  ENVIRONMENT.bat  README.txt  REBUILD.bat  REBUILD.ps1  build.bat  build.ps1  build.sh  clean.sh  generator.py  process-user-configurations.py  user-configurations.yaml
AvionicsSoftware-AtollicProject/Drivers/CMSIS/Device/ST/STM32F4xx/Source/: stm32f4xx_it.c
AvionicsSoftware-AtollicProject/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h
AvionicsSoftware-AtollicProject/Inc/: SPI.h  UART.h  altimeter.h  buzzer.h  configuration.h  dataLogging.h  flash.h  forward_declarations.h  hardware_definitions.h  main.h  pressure_sensor_bmp280.h  pressure_sensor_bmp3.h  recovery.h  startupTask.h  stm32f4xx_hal_uart_io.h  xtract.h
AvionicsSoftware-AtollicProject/Inc/stm32/: STM32.h
AvionicsSoftware-AtollicProject/Inc/tasks/: app_threads_controller.h  cli.h  command_line_interface.h  data_recorder.h  flight_state_controller.h  startup.h  timer.h
AvionicsSoftware-AtollicProject/Inc/tasks/command_line_interface/: controller.h  definitions.h
AvionicsSoftware-AtollicProject/Inc/tasks/command_line_interface/details/: internals.h
AvionicsSoftware-AtollicProject/Inc/tasks/command_line_interface/tools/: configure.h  ematch.h  mem.h  read.h
AvionicsSoftware-AtollicProject/Inc/tasks/sensors/: imu_sensor.h  pressure_sensor.h
AvionicsSoftware-AtollicProject/Inc/utilities/: common.h  data_recorder.h  math.h
AvionicsSoftware-AtollicProject/Src/: SPI.c  STM32.c  UART.c  altimeter.c  buzzer.c  configuration.c  dataLogging.c  flash.c  flash.h  main.c  pressure_sensor_bmp280.c  pressure_sensor_bmp3.c  recovery.c  sensorAG.c  startupTask.c  stm32f4xx_hal_uart_io.c  timer.c  xtract.c
AvionicsSoftware-AtollicProject/Src/fs/: fs.c
AvionicsSoftware-AtollicProject/Src/protocols/: SPI.c  SPI.h  UART.c
AvionicsSoftware-AtollicProject/Src/stm32/: STM32.c
AvionicsSoftware-AtollicProject/Src/tasks/: app_threads_controller.c  app_threads_controller.h  cli.c  command_line_interface.c  dataLogging.c  data_recorder.c  flight_state_controller.c  pressure_sensor_bmp280.c  pressure_sensor_bmp3.c  sensorAG.c  startup.c  startupTask.c  timer.c
AvionicsSoftware-AtollicProject/Src/tasks/command_line_interface/: controller.c
AvionicsSoftware-AtollicProject/Src/tasks/command_line_interface/tools/: configure.c  ematch.c  mem.c  read.c
AvionicsSoftware-AtollicProject/Src/tasks/sensors/: imu_sensor.c  pressure_sensor.c
AvionicsSoftware-AtollicProject/src/: buzzer.c  configuration.c  configuration.h  flash.c  flash.h
AvionicsSoftware-AtollicProject/src/fs/: fs.h  spiffs.h
AvionicsSoftware-AtollicProject/src/stm32/: STM32.c
AvionicsSoftware-AtollicProject/src/tasks/: app_threads_controller.c  flight_state_controller.c  timer.c
AvionicsSoftware-AtollicProject/src/tasks/command_line_interface/: controller.c  definitions.h
AvionicsSoftware-AtollicProject/src/tasks/command_line_interface/details/: internals.h
AvionicsSoftware-AtollicProject/src/tasks/command_line_interface/tools/: configure.c  ematch.c  mem.c  mem.h  read.c  read.h
AvionicsSoftware-AtollicProject/src/tasks/sensors/: imu_sensor.c  imu_sensor.h  pressure_sensor.c  pressure_sensor.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h
Src/: configuration.c  configuration.h  flash.c  flash.h  hardware_definitions.h  main.c  recovery.c  recovery.h
Src/fs/: fs.c
Src/protocols/: SPI.c  UART.c  UART.h
Src/stm32/: STM32.c
Src/tasks/: app_threads_controller.c  app_threads_controller.h  flight_state_controller.c  flight_state_controller.h  timer.c
Src/tasks/command_line_interface/: controller.c  controller.h  definitions.h
Src/tasks/command_line_interface/details/: internals.h
Src/tasks/command_line_interface/tools/: configure.c  configure.h  datafeeder.c  datafeeder.h  ematch.c  ematch.h  mem.c  read.c
Src/tasks/sensors/: imu_sensor.c  imu_sensor.h  pressure_sensor.c  pressure_sensor.h
Src/utilities/: common.h
data_feeder/: RUN.BAT  data.csv  datafeeder.py  requirements.txt  run.sh
